--- a/AppointMent App/styles.css
+++ b/AppointMent App/styles.css
@@ -19,4 +19,12 @@ body {
   #appointments-list li {
     margin-bottom: 5px;
   }
+  form{
+    background: orange;
+    color: green;
+  }
+
+  input{
+    font: gray !important;
+  }
   
